tests/expectations/compiler/dyn_record/dyn_record_optional_fail.out
Error [ETYC0372160]: The type `dyn record` cannot be wrapped in an optional.
    --> compiler-test:2:13
     |
   2 |     fn main(r: dyn record?) -> address {
     |             ^^^^^^^^^^^^^^
     |
     = Optionals cannot wrap signatures, finals, mappings, tuples, vectors, records, arrays whose elements are optional-unsafe, or structures containing any such types.
Error [ETYC0372164]: The input `r` has type `dyn record?`, which is or contains an optional type and is not allowed as an input to an entry point fn.
    --> compiler-test:2:13
     |
   2 |     fn main(r: dyn record?) -> address {
     |             ^^^^^^^^^^^^^^
     |
     = Inputs to entry point fn definitions cannot be optional or contain optionals. Consider moving the optionality outside the call site.
Error [ETYC0372117]: Expected a struct or record but type `dyn record?` was found.
    --> compiler-test:3:16
     |
   3 |         return r.owner;
     |                ^
